Getting ready to Deploy

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -6,6 +6,15 @@
     @ViewData["Title"]
 </h3>
 <h3>
+    August 16th, 2019 Update
+</h3>
+<h5>Release Notes</h5>
+<p>
+    Series can now show a column with change in competitors' rankings.
+</p><p>
+    Historical series can lock their results, so that changes in the scoring system or the races will no longer change the series.
+</p>
+<h3>
     August 10th, 2019 Update
 </h3>
 <h5>Release Notes</h5>
@@ -20,8 +29,10 @@
             Clubs can implement custom scoring systems that derive from the base
             systems, but customize codes or the discard pattern.
         </li>
-        <li> A club should have a default scoring system set. (It can be one of the
-        built in systems.)</li>
+        <li>
+            A club should have a default scoring system set. (It can be one of the
+            built in systems.)
+        </li>
         <li>Series can then be set to use a different system.</li>
     </ul>
     Also some enhancements have been made to support long series: helm name is now
@@ -41,7 +52,7 @@
         </li>
         <li>
             Localization support: clubs can have a defined locale that will control
-            display of dates and keywords can be translated. 
+            display of dates and keywords can be translated.
         </li>
     </ul>
 </p>
