--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -57,30 +57,29 @@
                 </select>
                 <span asp-validation-for="SeasonId" class="text-danger"></span>
             </div>
-            <div id="seasonSelectGroup" class="form-group">
-                <label asp-for="SeasonId" class="control-label">Season</label>
-                <select asp-for="SeasonId" class="form-control">
-                    <option selected="selected">Select a season...</option>
-                    @foreach (var season in Model.SeasonOptions)
-                    {
-                        <option value="@season.Id">
-                            @season.Name
-                        </option>
-                    }
-                </select>
-                <span asp-validation-for="SeasonId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="TrendOption">Calculate Rank Trend</label>
                 <select id="ScoringSystemId" asp-for="TrendOption" class="form-control">
                     @foreach (var trendOption in EnumHelper<TrendOption>.GetValues(TrendOption.None))
                     {
-                    <option value="@trendOption">
-                        @(EnumHelper<TrendOption>.GetDisplayValue(trendOption))
-                    </option>
+                        <option value="@trendOption">
+                            @(EnumHelper<TrendOption>.GetDisplayValue(trendOption))
+                        </option>
                     }
                 </select>
                 <span asp-validation-for="TrendOption" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ScoringSystemId">Default Scoring System</label>
+                <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
+                    @foreach (var scoringSystem in Model.ScoringSystemOptions)
+                    {
+                        <option value="@scoringSystem.Id">
+                            @scoringSystem.Name
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
