--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -10,9 +10,9 @@
 </h3>
 <h5>Release Notes</h5>
 <p>
-    Series can now show a column with change in competitors' rankings.
+    Series can include a column with changes in competitors' rankings.
 </p><p>
-    Historical series can lock their results, so that changes in the scoring system or the races will no longer change the series.
+    Historical series can lock results, so that changes in the scoring system or the races will no longer change the series.
 </p>
 <h3>
     August 10th, 2019 Update
