--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -23,13 +23,6 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsImportantSeries" /> List as Top Series
-                    </label>
-                </div>
-            </div>
-            <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
@@ -47,30 +40,56 @@
                 </select>
                 <span asp-validation-for="SeasonId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="TrendOption">Calculate Rank Trend</label>
-                <select id="ScoringSystemId" asp-for="TrendOption" class="form-control">
-                    @foreach (var trendOption in EnumHelper<TrendOption>.GetValues(TrendOption.None))
-                    {
-                        <option value="@trendOption">
-                            @(EnumHelper<TrendOption>.GetDisplayValue(trendOption))
-                        </option>
-                    }
-                </select>
-                <span asp-validation-for="TrendOption" class="text-danger"></span>
+            <div id="advancedFields" role="tablist">
+                <div class="card">
+                    <div class="card-header" role="tab" id="advancedHeading">
+                        <h5 class="mb-0">
+                            <a class="collapsed" data-toggle="collapse" href="#collapseAdvanced" aria-expanded="false" aria-controls="collapseAdvanced">
+                                Additional Settings
+                            </a> <span class="small"><em>&ensp;Optional</em></span>
+                        </h5>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input asp-for="IsImportantSeries" /> List as Top Series
+                            </label>
+                        </div>
+                    </div>
+                    <div id="collapseAdvanced" class="collapse" role="tabpanel" aria-labelledby="advancedHeading" data-parent="#advancedFields">
+                        <div class="card-body">
+
+                            <div class="form-group">
+                                <label asp-for="TrendOption">Calculate Rank Trend</label>
+                                <select id="ScoringSystemId" asp-for="TrendOption" class="form-control">
+                                    @foreach (var trendOption in EnumHelper<TrendOption>.GetValues(TrendOption.None))
+                                    {
+                                        <option value="@trendOption">
+                                            @(EnumHelper<TrendOption>.GetDisplayValue(trendOption))
+                                        </option>
+                                    }
+                                </select>
+                                <span asp-validation-for="TrendOption" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="ScoringSystemId">Default Scoring System</label>
+                                <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
+                                    @foreach (var scoringSystem in Model.ScoringSystemOptions)
+                                    {
+                                        <option value="@scoringSystem.Id">
+                                            @scoringSystem.Name
+                                        </option>
+                                    }
+                                </select>
+                                <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ScoringSystemId">Default Scoring System</label>
-                <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
-                    @foreach (var scoringSystem in Model.ScoringSystemOptions)
-                    {
-                        <option value="@scoringSystem.Id">
-                            @scoringSystem.Name
-                        </option>
-                    }
-                </select>
-                <span asp-validation-for="ScoringSystemId" class="text-danger"></span>
-            </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
                 <a asp-controller="Admin"
