WIP: Create Regatta

--- a/SailScores.Web/Views/Admin/Index.cshtml
+++ b/SailScores.Web/Views/Admin/Index.cshtml
@@ -98,6 +98,7 @@
     @await Html.PartialAsync("_CompetitorList", Model.Competitors)
     @await Html.PartialAsync("_RaceList", Model.Races)
     @await Html.PartialAsync("_ScoringSystems", Model.ScoringSystems)
+    @await Html.PartialAsync("_RegattaList", Model.Regattas)
 
 </div>
 
