WIP: Regatta Page work continues
Next up, better display of competitor list.

--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -42,7 +42,7 @@
             <li>
                 @regatta.StartDate?.ToString("D") - @regatta.EndDate?.ToString("D") <br />
                 <h3>
-                    <a href="~/@ViewData["ClubInitials"]/@regatta.Season.Name/@regatta.Name">
+                    <a href="~/@ViewData["ClubInitials"]/Regatta/@regatta.Season.Name/@regatta.Name">
                         @regatta.Season.Name  @regatta.Name
 
                     </a>
