--- a/SailScores.Web/Views/Regatta/Create.cshtml
+++ b/SailScores.Web/Views/Regatta/Create.cshtml
@@ -28,13 +28,26 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input id="date" asp-for="StartDate" class="form-control"/>
+                <input id="date" asp-for="StartDate" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input id="date" asp-for="EndDate" class="form-control"/>
+                <input id="date" asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
+            </div>
+            <div id="fleets" class="form-group">
+                <label asp-for="FleetIds" class="control-label">Fleets</label>
+                <small>Each fleet will be scored separately.</small>
+                <select multiple asp-for="FleetIds" class="form-control custom-select">
+                    @foreach (var fleet in Model.FleetOptions.OrderBy(c => c.Name))
+                    {
+                        <option value="@fleet.Id">
+                            @fleet.Name
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="FleetIds" class="text-danger"></span>
             </div>
             <div id="advancedFields" role="tablist">
                 <div class="card">
